--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "python-hbpdoc",
   "private": true,
   "dependencies": {
-    "material-design-iconic-font": "oliamb/material-design-iconic-font#f58f22e512a4d4a51692d582398400d6df73aefe",
+    "material-design-iconic-font": "2.1.1",
     "hbp-collaboratory-theme": "~0.0.9"
   }
 }
