--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "canonical-path": "^0.0.2",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.4.2",
+    "grunt-bump": "^0.3.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -14,6 +15,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-exec": "^0.4.6",
     "grunt-sass": "^1.0.0",
+    "grunt-version": "^1.0.0",
     "grunt-wiredep": "^2.0.0",
     "load-grunt-tasks": "^3.0.0",
     "lodash": "^2.4.1",
