--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "python-hbpdoc",
+  "name": "collaboratory-sphinx-theme",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
