--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,3 @@
 {
-    "directory": "assets/bower_components",
-    "registry": "http://bbpteam.epfl.ch/repository/bower"
+    "directory": "assets/bower_components"
 }
