--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "load-grunt-tasks": "^3.0.0",
     "lodash": "^2.4.1",
     "main-bower-files": "^2.5.0",
-    "request": "^2.58.0"
+    "replace": "~0.3.0",
+    "request": "^2.58.0",
+    "shelljs": "~0.5.3"
   },
   "scripts": {
     "test": "node_modules/bower/bin/bower update && node_modules/grunt-cli/bin/grunt dist"
