--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "hbp-collaboratory-sphinx-theme",
+  "name": "hbp-sphinx-theme",
   "version": "0.3.2",
   "private": true,
   "dependencies": {
